--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="galeria" class="gallery">
         <h2>Galería de Fotos</h2>
         <div class="grid-gallery">
-<img src="img/foto1.jpg" alt="">
+            <img src="img/foto1.jpg" alt="">
             <img src="img/foto2.jpg" alt="">
             <img src="img/foto3.jpg" alt="">
             <img src="img/foto4.jpg" alt="">
@@ -64,6 +64,40 @@
         </div>
     </section>
 
+    <section class="container" id="videos">
+    <h2 style="text-align: center; margin-bottom: 30px;">Recorrido en Video</h2>
+    <div class="video-grid">
+        <div class="video-item">
+            <video controls>
+                <source src="video1.mp4" type="video/mp4">
+                Tu navegador no soporta videos.
+            </video>
+            <p>Vista Exterior</p>
+        </div>
+        <div class="video-item">
+            <video controls>
+                <source src="video2.mp4" type="video/mp4">
+                Tu navegador no soporta videos.
+            </video>
+            <p>Interior y Ambientes</p>
+        </div>
+        <div class="video-item">
+            <video controls>
+                <source src="video3.mp4" type="video/mp4">
+                Tu navegador no soporta videos.
+            </video>
+            <p>Quincho y Parrilla</p>
+        </div>
+        <div class="video-item">
+            <video controls>
+                <source src="video4.mp4" type="video/mp4">
+                Tu navegador no soporta videos.
+            </video>
+            <p>Área de Pileta</p>
+        </div>
+    </div>
+</section>
+    
     <footer id="contacto">
         <h2>¿Te interesa conocerla?</h2>
         <p>Contacto: <strong>Alejandro Araldi</strong></p>
