--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
     <section id="galeria" class="gallery">
         <h2>Galería de Fotos</h2>
         <div class="grid-gallery">
-            <img src="img/foto1.jpg" alt="">
-            <img src="img/foto2.jpg" alt="">
-            <img src="img/foto3.jpg" alt="">
-            <img src="img/foto4.jpg" alt="">
-            <img src="img/foto5.jpg" alt="">
-            <img src="img/foto6.jpg" alt="">
-            <img src="img/foto7.jpg" alt="">
-            <img src="img/foto8.jpg" alt="">
-            <img src="img/foto9.jpg" alt="">
-            <img src="img/foto10.jpg" alt="">
-            <img src="img/foto11.jpg" alt="">
-            <img src="img/foto12.jpg" alt="">
-            <img src="img/foto13.jpg" alt="">
-            <img src="img/foto14.jpg" alt="">
-            <img src="img/foto15.jpg" alt="">
-            <img src="img/foto16.jpg" alt="">
-            <img src="img/foto17.jpg" alt="">
-            <img src="img/foto18.jpg" alt="">
-            <img src="img/foto19.jpg" alt="">
-            <img src="img/foto20.jpg" alt="">
-            <img src="img/foto21.jpg" alt="">
-            <img src="img/foto22.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto1.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto2.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto3.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto4.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto5.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto6.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto7.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto8.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto9.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto10.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto11.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto12.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto13.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto14.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto15.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto16.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto17.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto18.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto19.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto20.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto21.jpg" alt="">
+            <img src="https://web.fkinformatica.com/img/foto22.jpg" alt="">
         </div>
     </section>
 
