--- a/index.html
+++ b/index.html
@@ -3,108 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venta de Cabaña Premium - PH con Escritura</title>
+    <title>Venta de Cabaña Premium - Alejandro Araldi</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Oportunidad Única</div>
-            <ul>
-                <li><a href="#detalles">Detalles</a></li>
-                <li><a href="#galeria">Galería</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
+    <header style="background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://web.fkinformatica.com/img/foto1.jpg') no-repeat center center/cover;">
         <div class="hero">
-            <h1>Tu refugio soñado te espera</h1>
-            <p>132 m² de confort, jacuzzi y quincho propio. U$S 135.000</p>
-            <a href="#contacto" class="btn">Solicitar Información</a>
+            <h1>Cabaña Exclusiva en Venta</h1>
+            <p>132m² cubiertos | 4 Ambientes | Quincho y Jacuzzi</p>
+            <p class="main-price">U$S 135.000</p>
+            <a href="#contacto" class="btn-main">Contactar ahora</a>
         </div>
     </header>
 
-    <section id="detalles" class="specs">
-        <h2>Características Destacadas</h2>
-        <div class="grid-specs">
-            <div class="item"><strong>Superficie:</strong> 132 m² cubiertos / 535 m² terreno</div>
-            <div class="item"><strong>Ambientes:</strong> 4 amplios ambientes</div>
-            <div class="item"><strong>Climatización:</strong> Gas natural, 5 calefactores y horno de hierro</div>
-            <div class="item"><strong>Relax:</strong> Jacuzzi propio y pileta climatizada compartida</div>
-            <div class="item"><strong>Social:</strong> Quincho con parrilla interna (7 x 3.50 mts)</div>
-            <div class="item"><strong>Legal:</strong> PH con escritura lista para transferir</div>
+    <section class="container">
+        <div class="specs-grid">
+            <div class="spec-card"><h3>Terreno</h3><p>535 m² totales</p></div>
+            <div class="spec-card"><h3>Quincho</h3><p>7 x 3,50 mts con parrilla</p></div>
+            <div class="spec-card"><h3>Climatización</h3><p>Gas natural + 5 calefactores</p></div>
+            <div class="spec-card"><h3>Amenities</h3><p>Pileta climatizada 9x4</p></div>
         </div>
-    </section>
 
-    <section id="galeria" class="gallery">
+        <div class="description">
+            <h2>Detalles de la Propiedad</h2>
+            <p>Increíble propiedad de 132 m² cubiertos y 12 m² semicubiertos. Cuenta con un horno de hierro de 11.000 calorías, jacuzzi y todas las comodidades. Ubicada en un complejo con pileta compartida. <strong>PH con escritura.</strong></p>
+        </div>
+
         <h2>Galería de Fotos</h2>
-        <div class="grid-gallery">
-            <img src="https://web.fkinformatica.com/img/foto1.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto2.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto3.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto4.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto5.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto6.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto7.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto8.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto9.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto10.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto11.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto12.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto13.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto14.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto15.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto16.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto17.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto18.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto19.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto20.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto21.jpg" alt="">
-            <img src="https://web.fkinformatica.com/img/foto22.jpg" alt="">
+        <div class="gallery">
+            <img src="https://web.fkinformatica.com/img/foto1.jpg" alt="Propiedad foto 1">
+            <img src="https://web.fkinformatica.com/img/foto2.jpg" alt="Propiedad foto 2">
+            <img src="https://web.fkinformatica.com/img/foto3.jpg" alt="Propiedad foto 3">
+            <img src="https://web.fkinformatica.com/img/foto4.jpg" alt="Propiedad foto 4">
+            <img src="https://web.fkinformatica.com/img/foto5.jpg" alt="Propiedad foto 5">
+            <img src="https://web.fkinformatica.com/img/foto6.jpg" alt="Propiedad foto 6">
+            <img src="https://web.fkinformatica.com/img/foto7.jpg" alt="Propiedad foto 7">
+            <img src="https://web.fkinformatica.com/img/foto8.jpg" alt="Propiedad foto 8">
+            <img src="https://web.fkinformatica.com/img/foto9.jpg" alt="Propiedad foto 9">
+            <img src="https://web.fkinformatica.com/img/foto10.jpg" alt="Propiedad foto 10">
+            <img src="https://web.fkinformatica.com/img/foto11.jpg" alt="Propiedad foto 11">
+            <img src="https://web.fkinformatica.com/img/foto12.jpg" alt="Propiedad foto 12">
+            <img src="https://web.fkinformatica.com/img/foto13.jpg" alt="Propiedad foto 13">
+            <img src="https://web.fkinformatica.com/img/foto14.jpg" alt="Propiedad foto 14">
+            <img src="https://web.fkinformatica.com/img/foto15.jpg" alt="Propiedad foto 15">
+            <img src="https://web.fkinformatica.com/img/foto16.jpg" alt="Propiedad foto 16">
+            <img src="https://web.fkinformatica.com/img/foto17.jpg" alt="Propiedad foto 17">
+            <img src="https://web.fkinformatica.com/img/foto18.jpg" alt="Propiedad foto 18">
+            <img src="https://web.fkinformatica.com/img/foto19.jpg" alt="Propiedad foto 19">
+            <img src="https://web.fkinformatica.com/img/foto20.jpg" alt="Propiedad foto 20">
+            <img src="https://web.fkinformatica.com/img/foto21.jpg" alt="Propiedad foto 21">
+            <img src="https://web.fkinformatica.com/img/foto22.jpg" alt="Propiedad foto 22">
+        </div>
+
+        <h2 style="text-align: center; margin-top: 50px;">Recorridos en Video</h2>
+        <div class="video-grid">
+            <div class="video-item">
+                <video controls preload="metadata">
+                    <source src="https://web.fkinformatica.com/img/video1.mp4" type="video/mp4">
+                </video>
+                <p>Tour 1</p>
+            </div>
+            <div class="video-item">
+                <video controls preload="metadata">
+                    <source src="https://web.fkinformatica.com/img/video2.mp4" type="video/mp4">
+                </video>
+                <p>Tour 2</p>
+            </div>
+            <div class="video-item">
+                <video controls preload="metadata">
+                    <source src="https://web.fkinformatica.com/img/video3.mp4" type="video/mp4">
+                </video>
+                <p>Tour 3</p>
+            </div>
+            <div class="video-item">
+                <video controls preload="metadata">
+                    <source src="https://web.fkinformatica.com/img/video4.mp4" type="video/mp4">
+                </video>
+                <p>Tour 4</p>
+            </div>
         </div>
     </section>
 
-    <section class="container" id="videos">
-    <h2 style="text-align: center; margin-bottom: 30px;">Recorrido en Video</h2>
-    <div class="video-grid">
-        <div class="video-item">
-            <video controls>
-                <source src="video1.mp4" type="video/mp4">
-                Tu navegador no soporta videos.
-            </video>
-            <p>Vista Exterior</p>
-        </div>
-        <div class="video-item">
-            <video controls>
-                <source src="video2.mp4" type="video/mp4">
-                Tu navegador no soporta videos.
-            </video>
-            <p>Interior y Ambientes</p>
-        </div>
-        <div class="video-item">
-            <video controls>
-                <source src="video3.mp4" type="video/mp4">
-                Tu navegador no soporta videos.
-            </video>
-            <p>Quincho y Parrilla</p>
-        </div>
-        <div class="video-item">
-            <video controls>
-                <source src="video4.mp4" type="video/mp4">
-                Tu navegador no soporta videos.
-            </video>
-            <p>Área de Pileta</p>
-        </div>
-    </div>
-</section>
-    
     <footer id="contacto">
-        <h2>¿Te interesa conocerla?</h2>
-        <p>Contacto: <strong>Alejandro Araldi</strong></p>
-        <p>Escríbeme por correo para coordinar una visita y enviarte mi teléfono.</p>
-        <a href="mailto:fkserviciosinformaticos@gmail.com" class="btn-contact">Enviar Correo</a>
+        <h2>Contacto</h2>
+        <p><strong>Alejandro Araldi</strong></p>
+        <p>Email: <a href="mailto:fkserviciosinformaticos@gmail.com" style="color:white;">fkserviciosinformaticos@gmail.com</a></p>
+        <p><em>Contáctese por correo para solicitar el número de teléfono.</em></p>
+        <br>
+        <a href="mailto:fkserviciosinformaticos@gmail.com" class="btn-main">Enviar Mensaje Ahora</a>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
