--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
 
         <h2>Galería de Fotos</h2>
         <div class="gallery">
-            <img src="https://web.fkinformatica.com/img/foto1.jpg" alt="Propiedad foto 1">
-            <img src="https://web.fkinformatica.com/img/foto2.jpg" alt="Propiedad foto 2">
-            <img src="https://web.fkinformatica.com/img/foto3.jpg" alt="Propiedad foto 3">
-            <img src="https://web.fkinformatica.com/img/foto4.jpg" alt="Propiedad foto 4">
-            <img src="https://web.fkinformatica.com/img/foto5.jpg" alt="Propiedad foto 5">
-            <img src="https://web.fkinformatica.com/img/foto6.jpg" alt="Propiedad foto 6">
-            <img src="https://web.fkinformatica.com/img/foto7.jpg" alt="Propiedad foto 7">
-            <img src="https://web.fkinformatica.com/img/foto8.jpg" alt="Propiedad foto 8">
-            <img src="https://web.fkinformatica.com/img/foto9.jpg" alt="Propiedad foto 9">
-            <img src="https://web.fkinformatica.com/img/foto10.jpg" alt="Propiedad foto 10">
-            <img src="https://web.fkinformatica.com/img/foto11.jpg" alt="Propiedad foto 11">
-            <img src="https://web.fkinformatica.com/img/foto12.jpg" alt="Propiedad foto 12">
-            <img src="https://web.fkinformatica.com/img/foto13.jpg" alt="Propiedad foto 13">
-            <img src="https://web.fkinformatica.com/img/foto14.jpg" alt="Propiedad foto 14">
-            <img src="https://web.fkinformatica.com/img/foto15.jpg" alt="Propiedad foto 15">
-            <img src="https://web.fkinformatica.com/img/foto16.jpg" alt="Propiedad foto 16">
-            <img src="https://web.fkinformatica.com/img/foto17.jpg" alt="Propiedad foto 17">
-            <img src="https://web.fkinformatica.com/img/foto18.jpg" alt="Propiedad foto 18">
-            <img src="https://web.fkinformatica.com/img/foto19.jpg" alt="Propiedad foto 19">
-            <img src="https://web.fkinformatica.com/img/foto20.jpg" alt="Propiedad foto 20">
-            <img src="https://web.fkinformatica.com/img/foto21.jpg" alt="Propiedad foto 21">
-            <img src="https://web.fkinformatica.com/img/foto22.jpg" alt="Propiedad foto 22">
+            <img src="img/foto1.jpg" alt="Propiedad foto 1">
+            <img src="img/foto2.jpg" alt="Propiedad foto 2">
+            <img src="img/foto3.jpg" alt="Propiedad foto 3">
+            <img src="img/foto4.jpg" alt="Propiedad foto 4">
+            <img src="img/foto5.jpg" alt="Propiedad foto 5">
+            <img src="img/foto6.jpg" alt="Propiedad foto 6">
+            <img src="img/foto7.jpg" alt="Propiedad foto 7">
+            <img src="img/foto8.jpg" alt="Propiedad foto 8">
+            <img src="img/foto9.jpg" alt="Propiedad foto 9">
+            <img src="img/foto10.jpg" alt="Propiedad foto 10">
+            <img src="img/foto11.jpg" alt="Propiedad foto 11">
+            <img src="img/foto12.jpg" alt="Propiedad foto 12">
+            <img src="img/foto13.jpg" alt="Propiedad foto 13">
+            <img src="img/foto14.jpg" alt="Propiedad foto 14">
+            <img src="img/foto15.jpg" alt="Propiedad foto 15">
+            <img src="img/foto16.jpg" alt="Propiedad foto 16">
+            <img src="img/foto17.jpg" alt="Propiedad foto 17">
+            <img src="img/foto18.jpg" alt="Propiedad foto 18">
+            <img src="img/foto19.jpg" alt="Propiedad foto 19">
+            <img src="img/foto20.jpg" alt="Propiedad foto 20">
+            <img src="img/foto21.jpg" alt="Propiedad foto 21">
+            <img src="img/foto22.jpg" alt="Propiedad foto 22">
         </div>
 
         <h2 style="text-align: center; margin-top: 50px;">Recorridos en Video</h2>
