--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
         <div class="video-grid">
             <div class="video-item">
                 <video controls preload="metadata">
-                    <source src="https://web.fkinformatica.com/img/video1.mp4" type="video/mp4">
+                    <source src="video1.mp4" type="video/mp4">
                 </video>
                 <p>Tour 1</p>
             </div>
             <div class="video-item">
                 <video controls preload="metadata">
-                    <source src="https://web.fkinformatica.com/img/video2.mp4" type="video/mp4">
+                    <source src="video2.mp4" type="video/mp4">
                 </video>
                 <p>Tour 2</p>
             </div>
             <div class="video-item">
                 <video controls preload="metadata">
-                    <source src="https://web.fkinformatica.com/img/video3.mp4" type="video/mp4">
+                    <source src="video3.mp4" type="video/mp4">
                 </video>
                 <p>Tour 3</p>
             </div>
             <div class="video-item">
                 <video controls preload="metadata">
-                    <source src="https://web.fkinformatica.com/img/video4.mp4" type="video/mp4">
+                    <source src="video4.mp4" type="video/mp4">
                 </video>
                 <p>Tour 4</p>
             </div>
