--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <h2>Galería de Fotos</h2>
-        <div class="gallery">
+        <div class="gallery-grid img">
             <img src="img/foto1.jpg" alt="Propiedad foto 1">
             <img src="img/foto2.jpg" alt="Propiedad foto 2">
             <img src="img/foto3.jpg" alt="Propiedad foto 3">
