--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header style="background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://web.fkinformatica.com/img/foto1.jpg') no-repeat center center/cover;">
+    <header style="background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('img/foto1.jpg') no-repeat center center/cover;">
         <div class="hero">
             <h1>Cabaña Exclusiva en Venta</h1>
             <p>132m² cubiertos | 4 Ambientes | Quincho y Jacuzzi</p>
@@ -31,57 +31,37 @@
         </div>
 
         <h2>Galería de Fotos</h2>
-        <div class="gallery-grid img">
-            <img src="img/foto1.jpg" alt="Propiedad foto 1">
-            <img src="img/foto2.jpg" alt="Propiedad foto 2">
-            <img src="img/foto3.jpg" alt="Propiedad foto 3">
-            <img src="img/foto4.jpg" alt="Propiedad foto 4">
-            <img src="img/foto5.jpg" alt="Propiedad foto 5">
-            <img src="img/foto6.jpg" alt="Propiedad foto 6">
-            <img src="img/foto7.jpg" alt="Propiedad foto 7">
-            <img src="img/foto8.jpg" alt="Propiedad foto 8">
-            <img src="img/foto9.jpg" alt="Propiedad foto 9">
-            <img src="img/foto10.jpg" alt="Propiedad foto 10">
-            <img src="img/foto11.jpg" alt="Propiedad foto 11">
-            <img src="img/foto12.jpg" alt="Propiedad foto 12">
-            <img src="img/foto13.jpg" alt="Propiedad foto 13">
-            <img src="img/foto14.jpg" alt="Propiedad foto 14">
-            <img src="img/foto15.jpg" alt="Propiedad foto 15">
-            <img src="img/foto16.jpg" alt="Propiedad foto 16">
-            <img src="img/foto17.jpg" alt="Propiedad foto 17">
-            <img src="img/foto18.jpg" alt="Propiedad foto 18">
-            <img src="img/foto19.jpg" alt="Propiedad foto 19">
-            <img src="img/foto20.jpg" alt="Propiedad foto 20">
-            <img src="img/foto21.jpg" alt="Propiedad foto 21">
-            <img src="img/foto22.jpg" alt="Propiedad foto 22">
+        <div class="gallery">
+            <img src="img/foto1.jpg" alt="Foto 1">
+            <img src="img/foto2.jpg" alt="Foto 2">
+            <img src="img/foto3.jpg" alt="Foto 3">
+            <img src="img/foto4.jpg" alt="Foto 4">
+            <img src="img/foto5.jpg" alt="Foto 5">
+            <img src="img/foto6.jpg" alt="Foto 6">
+            <img src="img/foto7.jpg" alt="Foto 7">
+            <img src="img/foto8.jpg" alt="Foto 8">
+            <img src="img/foto9.jpg" alt="Foto 9">
+            <img src="img/foto10.jpg" alt="Foto 10">
+            <img src="img/foto11.jpg" alt="Foto 11">
+            <img src="img/foto12.jpg" alt="Foto 12">
+            <img src="img/foto13.jpg" alt="Foto 13">
+            <img src="img/foto14.jpg" alt="Foto 14">
+            <img src="img/foto15.jpg" alt="Foto 15">
+            <img src="img/foto16.jpg" alt="Foto 16">
+            <img src="img/foto17.jpg" alt="Foto 17">
+            <img src="img/foto18.jpg" alt="Foto 18">
+            <img src="img/foto19.jpg" alt="Foto 19">
+            <img src="img/foto20.jpg" alt="Foto 20">
+            <img src="img/foto21.jpg" alt="Foto 21">
+            <img src="img/foto22.jpg" alt="Foto 22">
         </div>
 
         <h2 style="text-align: center; margin-top: 50px;">Recorridos en Video</h2>
         <div class="video-grid">
-            <div class="video-item">
-                <video controls preload="metadata">
-                    <source src="video1.mp4" type="video/mp4">
-                </video>
-                <p>Tour 1</p>
-            </div>
-            <div class="video-item">
-                <video controls preload="metadata">
-                    <source src="video2.mp4" type="video/mp4">
-                </video>
-                <p>Tour 2</p>
-            </div>
-            <div class="video-item">
-                <video controls preload="metadata">
-                    <source src="video3.mp4" type="video/mp4">
-                </video>
-                <p>Tour 3</p>
-            </div>
-            <div class="video-item">
-                <video controls preload="metadata">
-                    <source src="video4.mp4" type="video/mp4">
-                </video>
-                <p>Tour 4</p>
-            </div>
+            <div class="video-item"><video controls preload="metadata"><source src="video1.mp4" type="video/mp4"></video><p>Tour 1</p></div>
+            <div class="video-item"><video controls preload="metadata"><source src="video2.mp4" type="video/mp4"></video><p>Tour 2</p></div>
+            <div class="video-item"><video controls preload="metadata"><source src="video3.mp4" type="video/mp4"></video><p>Tour 3</p></div>
+            <div class="video-item"><video controls preload="metadata"><source src="video4.mp4" type="video/mp4"></video><p>Tour 4</p></div>
         </div>
     </section>
 
@@ -89,9 +69,10 @@
         <h2>Contacto</h2>
         <p><strong>Alejandro Araldi</strong></p>
         <p>Email: <a href="mailto:fkserviciosinformaticos@gmail.com" style="color:white;">fkserviciosinformaticos@gmail.com</a></p>
-        <p><em>Contáctese por correo para solicitar el número de teléfono.</em></p>
         <br>
         <a href="mailto:fkserviciosinformaticos@gmail.com" class="btn-main">Enviar Mensaje Ahora</a>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
