--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
         <br>
         <a href="mailto:fkserviciosinformaticos@gmail.com" class="btn-main">Enviar Mensaje Ahora</a>
     </footer>
-
+    <div id="imageModal" class="modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="imgFull">
+        <div id="caption"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
