--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header style="background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('img/foto1.jpg') no-repeat center center/cover;">
+    <header style="background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('img/foto4.jpg') no-repeat center center/cover;">
         <div class="hero">
             <h1>Cabaña Exclusiva en Venta</h1>
             <p>132m² cubiertos | 4 Ambientes | Quincho y Jacuzzi</p>
