--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="video-item"><video controls preload="metadata"><source src="video2.mp4" type="video/mp4"></video><p>Tour 2</p></div>
             <div class="video-item"><video controls preload="metadata"><source src="video3.mp4" type="video/mp4"></video><p>Tour 3</p></div>
             <div class="video-item"><video controls preload="metadata"><source src="video4.mp4" type="video/mp4"></video><p>Tour 4</p></div>
-            <div class="video-item"><video controls preload="metadata"><source src="https://www.youtube.com/watch?v=jkYSQXo1Vfk" type="video/mp4"></video><p>Tour 5</p></div>
+            <div class="video-item"><video controls preload="metadata"><source src="video5.mp4" type="video/mp4"></video><p>Tour 5</p></div>
         </div>
     </section>
 
